Fix "Only this" button alignment

--- a/public/index.css
+++ b/public/index.css
@@ -38,6 +38,7 @@ iframe#tinking-extension-iframe {
 }
 
 #tinking-onlythis-btn {
+  align-items: center;
   appearance: none;
   backdrop-filter: none;
   backface-visibility: visible;
